fix: スキーマ修正
