# packages/core/src/generated-core/models/SongListResponse.ts
@@ -1,39 +1,40 @@
 /**
  * Operation real wave API
- * MSR Soundtrack audio management website\'s schema
+ * MSR Soundtrack audio management website\'s schema 
  *
  * OpenAPI spec version: 0.0.1
+ * 
  *
  * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
  * https://openapi-generator.tech
  * Do not edit the class manually.
  */
 
-import { Album } from "../models/Album.ts";
-import { Song } from "../models/Song.ts";
+import { Album } from '../models/Album.ts';
+import { Song } from '../models/Song.ts';
+import { HttpFile } from '../http/http.ts';
 
 export class SongListResponse {
-    "album": Album;
-    "songs": Array<Song>;
+    'album': Album;
+    'songs': Array<Song>;
 
     static readonly discriminator: string | undefined = undefined;
 
-    static readonly attributeTypeMap: Array<
-        { name: string; baseName: string; type: string; format: string }
-    > = [
+    static readonly mapping: {[index: string]: string} | undefined = undefined;
+
+    static readonly attributeTypeMap: Array<{name: string, baseName: string, type: string, format: string}> = [
         {
             "name": "album",
             "baseName": "album",
             "type": "Album",
-            "format": "",
+            "format": ""
         },
         {
             "name": "songs",
             "baseName": "songs",
             "type": "Array<Song>",
-            "format": "",
-        },
-    ];
+            "format": ""
+        }    ];
 
     static getAttributeTypeMap() {
         return SongListResponse.attributeTypeMap;
